- Remove superfluous modal click handlers - Instead of trying to keep track of 'scrollPosition' before / after opening modals, always make sure that we're adding `overflow: hidden` to the body when modals are open

--- a/_sass/agent-modal.scss
+++ b/_sass/agent-modal.scss
@@ -1,4 +1,9 @@
 .agent-modal {
+  .inner {
+    @include mobile {
+      padding: 0 18px;
+    }
+  }
   .hero {
     display: flex;
     justify-content: space-between;
